Corrected/Parser.output
Terminals unused in grammar

   SPCHAR


Grammar

    0 $accept: st $end

    1 st: DOCTYPE
    2   | DOCTYPE HTMLOP HTMLCL
    3   | HTMLOP HTMLCL
    4   | DOCTYPE HTMLOP head HTMLCL
    5   | HTMLOP head HTMLCL
    6   | DOCTYPE HTMLOP head body HTMLCL
    7   | HTMLOP head body HTMLCL
    8   | DOCTYPE HTMLOP body HTMLCL
    9   | HTMLOP body HTMLCL

   10 head: HEADOP title HEADCL
   11     | HEADOP HEADCL

   12 title: TITLEOP TITLECL
   13      | TITLEOP consume TITLECL

   14 body: BODYOP flow BODYCL
   15     | BODYOP BODYCL

   16 misc: COMMENT
   17     | BR
   18     | TEXT
   19     | IMGOP img
   20     | SYMBOL

   21 consume: consume misc
   22        | misc

   23 miscph: misc
   24       | AOP atagph
   25       | FONTOP fontph
   26       | CENTEROP centerph

   27 consumeph: consumeph miscph
   28          | miscph

   29 flow: BPHRASEOP phraseopen
   30     | GTPHOP gtph
   31     | LOP list
   32     | misc flow
   33     | misc
   34     | DIVOP div
   35     | DLOP dl
   36     | TABOP table
   37     | FIGOP figure
   38     | AOP atag
   39     | FONTOP font
   40     | CENTEROP center

   41 center: flow CENTERCL
   42       | flow CENTERCL flow
   43       | CENTERCL
   44       | CENTERCL flow

   45 phraseopen: phrases BPHRASECL flow
   46           | BPHRASECL flow
   47           | BPHRASECL
   48           | phrases BPHRASECL
   49           | consumeph BPHRASECL flow
   50           | consumeph BPHRASECL

   51 phrases: PHRASEOP phr
   52        | consumeph PHRASEOP phr

   53 phr: PHRASECL
   54    | phrases PHRASECL
   55    | PHRASECL phrases
   56    | PHRASECL consumeph
   57    | consumeph PHRASECL
   58    | consumeph PHRASECL phrases
   59    | consumeph PHRASECL consumeph

   60 fontph: ATTRIBUTE ATTRIBUTEVAL FONTOOP FONTCL
   61       | ATTRIBUTE ATTRIBUTEVAL FONTOOP phrases FONTCL
   62       | FONTOOP phrases FONTCL
   63       | ATTRIBUTE ATTRIBUTEVAL FONTOOP consumeph FONTCL
   64       | FONTOOP consumeph FONTCL

   65 atagph: ATTRIBUTE ATTRIBUTEVAL AOPOP phrases ACL
   66       | AOPOP phrases ACL
   67       | AOPOP ACL
   68       | ATTRIBUTE ATTRIBUTEVAL AOPOP ACL

   69 gtph: phrases GTPHCL flow
   70     | phrases GTPHCL
   71     | GTPHCL flow
   72     | GTPHCL
   73     | consumeph GTPHCL
   74     | consumeph GTPHCL flow
   75     | BPHRASEOP phraseopen GTPHCL flow
   76     | BPHRASEOP phraseopen GTPHCL
   77     | consumeph BPHRASEOP phraseopen GTPHCL flow
   78     | consumeph BPHRASEOP phraseopen GTPHCL

   79 centerph: phrases CENTERCL
   80         | consumeph CENTERCL
   81         | CENTERCL
   82         | BPHRASEOP phraseopen CENTERCL
   83         | consumeph BPHRASEOP phraseopen CENTERCL

   84 list: LIOP listitem list
   85     | LCL
   86     | consume LIOP listitem list
   87     | consume LCL
   88     | LCL flow
   89     | consume LCL flow

   90 listitem: flow LICL
   91         | LICL

   92 div: DIVCL
   93    | DIVCL flow
   94    | flow DIVCL flow
   95    | flow DIVCL

   96 dl: DLCL
   97   | consume DLCL
   98   | DIVOP div DLCL
   99   | consume DIVOP div DLCL
  100   | DLCL flow
  101   | consume DLCL flow
  102   | DIVOP div DLCL flow
  103   | consume DIVOP div DLCL flow
  104   | DTOP dt DLCL
  105   | DTOP dt DLCL flow
  106   | consume DTOP dt DLCL
  107   | consume DTOP dt DLCL flow

  108 dt: flow DTCL DDOP dd
  109   | flow DTCL consume DDOP dd
  110   | flow DTCL DDOP dd DTOP dt
  111   | DTCL DDOP dd
  112   | DTCL DDOP dd DTOP dt

  113 dd: flow DDCL
  114   | flow DDCL DDOP dd
  115   | DDCL
  116   | DDCL DDOP dd
  117   | flow DDCL consume
  118   | flow DDCL consume DDOP dd
  119   | DDCL consume
  120   | DDCL consume DDOP dd

  121 caption: flow CAPCL
  122        | CAPCL
  123        | flow CAPCL consume
  124        | CAPCL consume

  125 table: CAPOP caption TABCL
  126      | CAPOP caption TABCL flow
  127      | consume CAPOP caption TABCL
  128      | consume CAPOP caption TABCL flow
  129      | CAPOP caption TROP tr TABCL
  130      | TROP tr TABCL
  131      | CAPOP caption TROP tr TABCL flow
  132      | TROP tr TABCL flow
  133      | TABCL
  134      | TABCL flow

  135 tr: TRCL
  136   | consume TRCL
  137   | THOP th TRCL
  138   | TDOP td TRCL
  139   | TRCL consume
  140   | consume TRCL consume
  141   | THOP th TRCL consume
  142   | TDOP td TRCL consume
  143   | TRCL TROP tr
  144   | TRCL consume TROP tr
  145   | THOP th TRCL TROP tr
  146   | TDOP td TRCL TROP tr
  147   | THOP th TRCL consume TROP tr
  148   | TDOP td TRCL consume TROP tr

  149 th: THCL
  150   | flow THCL
  151   | THCL consume
  152   | flow THCL consume
  153   | THCL THOP th
  154   | flow THCL THOP th
  155   | THCL consume THOP th
  156   | flow THCL consume THOP th

  157 td: TDCL
  158   | flow TDCL
  159   | TDCL consume
  160   | flow TDCL consume
  161   | TDCL TDOP td
  162   | flow TDCL TDOP td
  163   | TDCL consume TDOP td
  164   | flow TDCL consume TDOP td

  165 figure: flow FIGCAPOP figcap FIGCL
  166       | FIGCAPOP figcap FIGCL
  167       | FIGCAPOP figcap flow FIGCL
  168       | flow FIGCL
  169       | FIGCL
  170       | flow FIGCAPOP figcap FIGCL flow
  171       | FIGCAPOP figcap FIGCL flow
  172       | FIGCAPOP figcap flow FIGCL flow
  173       | flow FIGCL flow
  174       | FIGCL flow
  175       | flow FIGCAPOP figcap flow FIGCL flow
  176       | flow FIGCAPOP figcap flow FIGCL

  177 figcap: flow FIGCAPCL
  178       | FIGCAPCL

  179 img: ATTRIBUTE ATTRIBUTEVAL img
  180    | IMGCL

  181 atag: ATTRIBUTE ATTRIBUTEVAL AOPOP flow ACL flow
  182     | AOPOP flow ACL flow
  183     | AOPOP ACL flow
  184     | ATTRIBUTE ATTRIBUTEVAL AOPOP flow ACL
  185     | AOPOP flow ACL
  186     | AOPOP ACL
  187     | ATTRIBUTE ATTRIBUTEVAL AOPOP ACL flow
  188     | ATTRIBUTE ATTRIBUTEVAL AOPOP ACL

  189 font: ATTRIBUTE ATTRIBUTEVAL FONTOOP FONTCL
  190     | ATTRIBUTE ATTRIBUTEVAL FONTOOP flow FONTCL
  191     | FONTOOP flow FONTCL
  192     | ATTRIBUTE ATTRIBUTEVAL FONTOOP FONTCL flow
  193     | ATTRIBUTE ATTRIBUTEVAL FONTOOP flow FONTCL flow
  194     | FONTOOP flow FONTCL flow


Terminals, with rules where they appear

$end (0) 0
error (256)
DOCTYPE (258) 1 2 4 6 8
HTMLOP (259) 2 3 4 5 6 7 8 9
HTMLCL (260) 2 3 4 5 6 7 8 9
HEADOP (261) 10 11
HEADCL (262) 10 11
TITLEOP (263) 12 13
TITLECL (264) 12 13
BODYOP (265) 14 15
BODYCL (266) 14 15
BPHRASEOP (267) 29 75 76 77 78 82 83
BPHRASECL (268) 45 46 47 48 49 50
PHRASEOP (269) 51 52
PHRASECL (270) 53 54 55 56 57 58 59
GTPHOP (271) 30
GTPHCL (272) 69 70 71 72 73 74 75 76 77 78
TEXT (273) 18
AOPOP (274) 65 66 67 68 181 182 183 184 185 186 187 188
AOP (275) 24 38
ACL (276) 65 66 67 68 181 182 183 184 185 186 187 188
ATTRIBUTE (277) 60 61 63 65 68 179 181 184 187 188 189 190 192 193
ATTRIBUTEVAL (278) 60 61 63 65 68 179 181 184 187 188 189 190 192 193
DIVOP (279) 34 98 99 102 103
DIVCL (280) 92 93 94 95
IMGOP (281) 19
IMGCL (282) 180
FONTOP (283) 25 39
FONTOOP (284) 60 61 62 63 64 189 190 191 192 193 194
FONTCL (285) 60 61 62 63 64 189 190 191 192 193 194
LOP (286) 31
LCL (287) 85 87 88 89
LIOP (288) 84 86
LICL (289) 90 91
FIGOP (290) 37
FIGCL (291) 165 166 167 168 169 170 171 172 173 174 175 176
FIGCAPOP (292) 165 166 167 170 171 172 175 176
FIGCAPCL (293) 177 178
DLOP (294) 35
DLCL (295) 96 97 98 99 100 101 102 103 104 105 106 107
DTOP (296) 104 105 106 107 110 112
DTCL (297) 108 109 110 111 112
DDOP (298) 108 109 110 111 112 114 116 118 120
DDCL (299) 113 114 115 116 117 118 119 120
TABOP (300) 36
TABCL (301) 125 126 127 128 129 130 131 132 133 134
CAPOP (302) 125 126 127 128 129 131
CAPCL (303) 121 122 123 124
TROP (304) 129 130 131 132 143 144 145 146 147 148
TRCL (305) 135 136 137 138 139 140 141 142 143 144 145 146 147 148
THOP (306) 137 141 145 147 153 154 155 156
THCL (307) 149 150 151 152 153 154 155 156
TDOP (308) 138 142 146 148 161 162 163 164
TDCL (309) 157 158 159 160 161 162 163 164
BR (310) 17
COMMENT (311) 16
SPCHAR (312)
SYMBOL (313) 20
CENTEROP (314) 26 40
CENTERCL (315) 41 42 43 44 79 80 81 82 83


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
st (62)
    on left: 1 2 3 4 5 6 7 8 9, on right: 0
head (63)
    on left: 10 11, on right: 4 5 6 7
title (64)
    on left: 12 13, on right: 10
body (65)
    on left: 14 15, on right: 6 7 8 9
misc (66)
    on left: 16 17 18 19 20, on right: 21 22 23 32 33
consume (67)
    on left: 21 22, on right: 13 21 86 87 89 97 99 101 103 106 107
    109 117 118 119 120 123 124 127 128 136 139 140 141 142 144 147
    148 151 152 155 156 159 160 163 164
miscph (68)
    on left: 23 24 25 26, on right: 27 28
consumeph (69)
    on left: 27 28, on right: 27 49 50 52 56 57 58 59 63 64 73 74 77
    78 80 83
flow (70)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40, on right: 14 32 41
    42 44 45 46 49 69 71 74 75 77 88 89 90 93 94 95 100 101 102 103
    105 107 108 109 110 113 114 117 118 121 123 126 128 131 132 134
    150 152 154 156 158 160 162 164 165 167 168 170 171 172 173 174
    175 176 177 181 182 183 184 185 187 190 191 192 193 194
center (71)
    on left: 41 42 43 44, on right: 40
phraseopen (72)
    on left: 45 46 47 48 49 50, on right: 29 75 76 77 78 82 83
phrases (73)
    on left: 51 52, on right: 45 48 54 55 58 61 62 65 66 69 70 79
phr (74)
    on left: 53 54 55 56 57 58 59, on right: 51 52
fontph (75)
    on left: 60 61 62 63 64, on right: 25
atagph (76)
    on left: 65 66 67 68, on right: 24
gtph (77)
    on left: 69 70 71 72 73 74 75 76 77 78, on right: 30
centerph (78)
    on left: 79 80 81 82 83, on right: 26
list (79)
    on left: 84 85 86 87 88 89, on right: 31 84 86
listitem (80)
    on left: 90 91, on right: 84 86
div (81)
    on left: 92 93 94 95, on right: 34 98 99 102 103
dl (82)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107, on right:
    35
dt (83)
    on left: 108 109 110 111 112, on right: 104 105 106 107 110 112
dd (84)
    on left: 113 114 115 116 117 118 119 120, on right: 108 109 110
    111 112 114 116 118 120
caption (85)
    on left: 121 122 123 124, on right: 125 126 127 128 129 131
table (86)
    on left: 125 126 127 128 129 130 131 132 133 134, on right: 36
tr (87)
    on left: 135 136 137 138 139 140 141 142 143 144 145 146 147 148,
    on right: 129 130 131 132 143 144 145 146 147 148
th (88)
    on left: 149 150 151 152 153 154 155 156, on right: 137 141 145
    147 153 154 155 156
td (89)
    on left: 157 158 159 160 161 162 163 164, on right: 138 142 146
    148 161 162 163 164
figure (90)
    on left: 165 166 167 168 169 170 171 172 173 174 175 176, on right:
    37
figcap (91)
    on left: 177 178, on right: 165 166 167 170 171 172 175 176
img (92)
    on left: 179 180, on right: 19 179
atag (93)
    on left: 181 182 183 184 185 186 187 188, on right: 38
font (94)
    on left: 189 190 191 192 193 194, on right: 39


State 0

    0 $accept: . st $end

    DOCTYPE  shift, and go to state 1
    HTMLOP   shift, and go to state 2

    st  go to state 3


State 1

    1 st: DOCTYPE .
    2   | DOCTYPE . HTMLOP HTMLCL
    4   | DOCTYPE . HTMLOP head HTMLCL
    6   | DOCTYPE . HTMLOP head body HTMLCL
    8   | DOCTYPE . HTMLOP body HTMLCL

    HTMLOP  shift, and go to state 4

    $default  reduce using rule 1 (st)


State 2

    3 st: HTMLOP . HTMLCL
    5   | HTMLOP . head HTMLCL
    7   | HTMLOP . head body HTMLCL
    9   | HTMLOP . body HTMLCL

    HTMLCL  shift, and go to state 5
    HEADOP  shift, and go to state 6
    BODYOP  shift, and go to state 7

    head  go to state 8
    body  go to state 9


State 3

    0 $accept: st . $end

    $end  shift, and go to state 10


State 4

    2 st: DOCTYPE HTMLOP . HTMLCL
    4   | DOCTYPE HTMLOP . head HTMLCL
    6   | DOCTYPE HTMLOP . head body HTMLCL
    8   | DOCTYPE HTMLOP . body HTMLCL

    HTMLCL  shift, and go to state 11
    HEADOP  shift, and go to state 6
    BODYOP  shift, and go to state 7

    head  go to state 12
    body  go to state 13


State 5

    3 st: HTMLOP HTMLCL .

    $default  reduce using rule 3 (st)


State 6

   10 head: HEADOP . title HEADCL
   11     | HEADOP . HEADCL

    HEADCL   shift, and go to state 14
    TITLEOP  shift, and go to state 15

    title  go to state 16


State 7

   14 body: BODYOP . flow BODYCL
   15     | BODYOP . BODYCL

    BODYCL     shift, and go to state 17
    BPHRASEOP  shift, and go to state 18
    GTPHOP     shift, and go to state 19
    TEXT       shift, and go to state 20
    AOP        shift, and go to state 21
    DIVOP      shift, and go to state 22
    IMGOP      shift, and go to state 23
    FONTOP     shift, and go to state 24
    LOP        shift, and go to state 25
    FIGOP      shift, and go to state 26
    DLOP       shift, and go to state 27
    TABOP      shift, and go to state 28
    BR         shift, and go to state 29
    COMMENT    shift, and go to state 30
    SYMBOL     shift, and go to state 31
    CENTEROP   shift, and go to state 32

    misc  go to state 33
    flow  go to state 34


State 8

    5 st: HTMLOP head . HTMLCL
    7   | HTMLOP head . body HTMLCL

    HTMLCL  shift, and go to state 35
    BODYOP  shift, and go to state 7

    body  go to state 36


State 9

    9 st: HTMLOP body . HTMLCL

    HTMLCL  shift, and go to state 37


State 10

    0 $accept: st $end .

    $default  accept


State 11

    2 st: DOCTYPE HTMLOP HTMLCL .

    $default  reduce using rule 2 (st)


State 12

    4 st: DOCTYPE HTMLOP head . HTMLCL
    6   | DOCTYPE HTMLOP head . body HTMLCL

    HTMLCL  shift, and go to state 38
    BODYOP  shift, and go to state 7

    body  go to state 39


State 13

    8 st: DOCTYPE HTMLOP body . HTMLCL

    HTMLCL  shift, and go to state 40


State 14

   11 head: HEADOP HEADCL .

    $default  reduce using rule 11 (head)


State 15

   12 title: TITLEOP . TITLECL
   13      | TITLEOP . consume TITLECL

    TITLECL  shift, and go to state 41
    TEXT     shift, and go to state 20
    IMGOP    shift, and go to state 23
    BR       shift, and go to state 29
    COMMENT  shift, and go to state 30
    SYMBOL   shift, and go to state 31

    misc     go to state 42
    consume  go to state 43


State 16

   10 head: HEADOP title . HEADCL

    HEADCL  shift, and go to state 44


State 17

   15 body: BODYOP BODYCL .

    $default  reduce using rule 15 (body)


State 18

   29 flow: BPHRASEOP . phraseopen

    BPHRASECL  shift, and go to state 45
    PHRASEOP   shift, and go to state 46
    TEXT       shift, and go to state 20
    AOP        shift, and go to state 47
    IMGOP      shift, and go to state 23
    FONTOP     shift, and go to state 48
    BR         shift, and go to state 29
    COMMENT    shift, and go to state 30
    SYMBOL     shift, and go to state 31
    CENTEROP   shift, and go to state 49

    misc        go to state 50
    miscph      go to state 51
    consumeph   go to state 52
    phraseopen  go to state 53
    phrases     go to state 54


State 19

   30 flow: GTPHOP . gtph

    BPHRASEOP  shift, and go to state 55
    PHRASEOP   shift, and go to state 46
    GTPHCL     shift, and go to state 56
    TEXT       shift, and go to state 20
    AOP        shift, and go to state 47
    IMGOP      shift, and go to state 23
    FONTOP     shift, and go to state 48
    BR         shift, and go to state 29
    COMMENT    shift, and go to state 30
    SYMBOL     shift, and go to state 31
    CENTEROP   shift, and go to state 49

    misc       go to state 50
    miscph     go to state 51
    consumeph  go to state 57
    phrases    go to state 58
    gtph       go to state 59


State 20

   18 misc: TEXT .

    $default  reduce using rule 18 (misc)


State 21

   38 flow: AOP . atag

    AOPOP      shift, and go to state 60
    ATTRIBUTE  shift, and go to state 61

    atag  go to state 62


State 22

   34 flow: DIVOP . div

    BPHRASEOP  shift, and go to state 18
    GTPHOP     shift, and go to state 19
    TEXT       shift, and go to state 20
    AOP        shift, and go to state 21
    DIVOP      shift, and go to state 22
    DIVCL      shift, and go to state 63
    IMGOP      shift, and go to state 23
    FONTOP     shift, and go to state 24
    LOP        shift, and go to state 25
    FIGOP      shift, and go to state 26
    DLOP       shift, and go to state 27
    TABOP      shift, and go to state 28
    BR         shift, and go to state 29
    COMMENT    shift, and go to state 30
    SYMBOL     shift, and go to state 31
    CENTEROP   shift, and go to state 32

    misc  go to state 33
    flow  go to state 64
    div   go to state 65


State 23

   19 misc: IMGOP . img

    ATTRIBUTE  shift, and go to state 66
    IMGCL      shift, and go to state 67

    img  go to state 68


State 24

   39 flow: FONTOP . font

    ATTRIBUTE  shift, and go to state 69
    FONTOOP    shift, and go to state 70

    font  go to state 71


State 25

   31 flow: LOP . list

    TEXT     shift, and go to state 20
    IMGOP    shift, and go to state 23
    LCL      shift, and go to state 72
    LIOP     shift, and go to state 73
    BR       shift, and go to state 29
    COMMENT  shift, and go to state 30
    SYMBOL   shift, and go to state 31

    misc     go to state 42
    consume  go to state 74
    list     go to state 75


State 26

   37 flow: FIGOP . figure

    BPHRASEOP  shift, and go to state 18
    GTPHOP     shift, and go to state 19
    TEXT       shift, and go to state 20
    AOP        shift, and go to state 21
    DIVOP      shift, and go to state 22
    IMGOP      shift, and go to state 23
    FONTOP     shift, and go to state 24
    LOP        shift, and go to state 25
    FIGOP      shift, and go to state 26
    FIGCL      shift, and go to state 76
    FIGCAPOP   shift, and go to state 77
    DLOP       shift, and go to state 27
    TABOP      shift, and go to state 28
    BR         shift, and go to state 29
    COMMENT    shift, and go to state 30
    SYMBOL     shift, and go to state 31
    CENTEROP   shift, and go to state 32

    misc    go to state 33
    flow    go to state 78
    figure  go to state 79


State 27

   35 flow: DLOP . dl

    TEXT     shift, and go to state 20
    DIVOP    shift, and go to state 80
    IMGOP    shift, and go to state 23
    DLCL     shift, and go to state 81
    DTOP     shift, and go to state 82
    BR       shift, and go to state 29
    COMMENT  shift, and go to state 30
    SYMBOL   shift, and go to state 31

    misc     go to state 42
    consume  go to state 83
    dl       go to state 84


State 28

   36 flow: TABOP . table

    TEXT     shift, and go to state 20
    IMGOP    shift, and go to state 23
    TABCL    shift, and go to state 85
    CAPOP    shift, and go to state 86
    TROP     shift, and go to state 87
    BR       shift, and go to state 29
    COMMENT  shift, and go to state 30
    SYMBOL   shift, and go to state 31

    misc     go to state 42
    consume  go to state 88
    table    go to state 89


State 29

   17 misc: BR .

    $default  reduce using rule 17 (misc)


State 30

   16 misc: COMMENT .

    $default  reduce using rule 16 (misc)


State 31

   20 misc: SYMBOL .

    $default  reduce using rule 20 (misc)


State 32

   40 flow: CENTEROP . center
